--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'dnsjava:dnsjava:2.1.8'
 	implementation('org.springframework.cloud:spring-cloud-starter-gateway')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
