Desactivando busqueda de DNS y modificando rutas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,11 @@ spring:
           enabled: true
       routes:
         - id: hello_route
-          uri: lb://say-hello/greeting
+          uri: lb://say-hello
           predicates:
             - Path=/hello
         - id: hi_route
-          uri: lb://say-hello/hi
+          uri: lb://say-hello
           predicates:
             - Path=/hi
 
