--- a/build.gradle
+++ b/build.gradle
@@ -40,13 +40,11 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+//	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'dnsjava:dnsjava:2.1.8'
-	implementation('org.springframework.cloud:spring-cloud-starter-gateway')
+//	implementation('org.springframework.cloud:spring-cloud-starter-gateway')
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.2.10.RELEASE'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
 }
 
 dependencyManagement {
