--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,12 @@ zuul:
         stripPrefix: false  #if zuul should replace the "/sample/" segment
         sensitiveHeaders:
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
 
 #################### Spring Cloud Gateway ########################
 #server:
