Obtener dinamicamente uri

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,13 @@ spring:
 server:
   port: 8080 #the default port used for zuul service
 
-zuul:
-  routes:
-    say-instance:
-      path: /redireccion/say/**
-      serviceId: SAY-INSTANCE
+  cloud:
+    gateway:
+      routes:
+        - id: say-instance
+          uri: lb://SAY-INSTANCE
+          predicates:
+            - Path=/redireccion/say/**
 
 eureka:
   client:
