--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ server:
           uri: lb://SAY-INSTANCE
           predicates:
             - Path=/redireccion/say/**
+    loadbalancer:
+      ribbon:
+        enabled: false
 
 eureka:
   client:
