--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.cloud.loadbalancer.ribbon.enabled=false
+logging.level.org.springframework.cloud.gateway=TRACE
+management.endpoints.web.exposure.include=*
