--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,18 +6,11 @@ spring:
     name: balancing
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
       routes:
-        - id: customers
-          uri: lb://customer-service
+        - id: say-instance
+          uri: lb://SAY-INSTANCE
           predicates:
-            - Path=/customer/**
-        - id: restaurants
-          uri: lb://restaurant-service
-          predicates:
-            - Path=/restaurant/**
+            - Path=/redireccion/say/**
 
 
 eureka:
