--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,9 @@ spring:
     name: balancing
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
       routes:
         - id: say-instance
-          uri: lb://SAY-INSTANCE
+          uri: lb://SAY-INSTANCE/
           predicates:
             - Path=/redireccion/say/**
 
