--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     gateway:
       routes:
         - id: say-instance
-          uri: lb://SAY-INSTANCE
+          uri: lb://SAY-INSTANCE/
           predicates:
             - Path=/redireccion/say/**
 
