--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
           uri: lb://SAY-INSTANCE
           predicates:
             - Path=/**
+          filters:
+            - RewritePath=/redireccion/say/(?<segment>/?.*), $\{segment}
 
 eureka:
   client:
